--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "abdullah-dental-cloud",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "engines": {
     "node": "24.x"
   },
   "scripts": {
-    "dev": "npx vite",
-    "build": "npx vite build",
-    "preview": "npx vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
