--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postinstall": "chmod +x ./node_modules/.bin/vite"
+    "postinstall": "chmod +x ./node_modules/.bin/vite 2>/dev/null || true"
   },
   "dependencies": {
-    "canvas-confetti": "^1.9.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.453.0",
     "gapi-script": "^1.2.0",
     "jspdf": "^2.5.1",
-    "lucide-react": "^0.292.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "canvas-confetti": "^1.9.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
@@ -26,7 +23,7 @@
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
